# rummur-protocol

./: .gitignore  CMakeLists.txt  LICENSE  PLAN.md  PROTOCOL.md  README.md
cli/: CMakeLists.txt
scripts/: setup-dev-env.sh
src/: CMakeLists.txt  address.cpp  crypto.cpp  decode.cpp  encode.cpp  internal.h  libxmrmsg.h  monero_base58.cpp  monero_base58.h  wallet.cpp
tests/: CMakeLists.txt  fuzz_decode.cpp  gen_test_addrs.cpp  generate_test_vectors.cpp  test_core.cpp
